# Codex1

./: README.md  config.yaml  pyproject.toml
jobpipeline/app/: main.py
jobpipeline/collectors/: parser.py
jobpipeline/core/: cli.py  models.py  pipeline.py
jobpipeline/dedupe/: engine.py
jobpipeline/export/: excel_sync.py
jobpipeline/scoring/: engine.py
jobpipeline/sources/: adapters.py  base.py  manager.py
jobpipeline/storage/: sqlite_repo.py
jobpipeline/utils/: config.py  logging.py  text.py  throttle.py
tests/: test_adapters.py  test_scoring.py
